# smart-contract-encoder

./: .gitmodules  README.md  download_dataset.sh  pyproject.toml  run_all.sh
src/smart_contract_encoder/: data_curation.py  encoder.py  eval.py  eval_data_creation.py  graphs.py  load_data.py  log_graphs.py  nicad_eval_data_creation.py  setup.py  train.py  training_data_creation.py  utils.py
src/smart_contract_encoder/models/: base_model.py  ngram_model.py  sentence_encoder.py  smartembed_model.py
